--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
 /*In dit bestand plaats je alle algemene styling die geldt voor de gehele applicatie*/
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
 
 :root {
   --color-primary: #38E991;
   --color-secondary: #2C2F39;
   --color-tertiary: #50535C;
-  --color-secondary-light: #E8E9ED;
   --color-white: #FFFFFF;
 }
 
@@ -16,7 +14,7 @@
 }
 
 body {
-  font-family: 'PT Sans', system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-synthesis: none;
@@ -24,29 +22,30 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-  color: var(--color-secondary);
 }
 
 button, input, select, textarea {
   font-family: inherit;
 }
 
-button:hover {
-  cursor: pointer;
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+  margin-block: 0.67em;
 }
 
 h1 {
-  font-size: 3.4em;
+  font-size: 3.2em;
   line-height: 1.1;
-  margin-block: 1em;
+  margin-block: 0.67em;
 }
 
 h2 {
-  margin-block: 2.3em;
+  margin-block: 0.83em;
 }
 
 h3 {
-  margin-block: 1.6em;
+  margin-block: 1em;
 }
 
 h4 {
@@ -54,34 +53,5 @@ h4 {
 }
 
 p {
-  font-size: 1.2em;
   margin-block: 0.5em;
-}
-
-img {
-  width: 100%;
-}
-
-figure {
-  margin: 0 0 2em 0;
-}
-
-figcaption {
-  text-align: right;
-  font-size: 0.9em;
-}
-
-a,
-a:visited {
-  color: var(--color-primary);
-  text-decoration: none;
-  font-weight: 600;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-em {
-  font-style: italic;
 }
